Arregle el toString() y tambien el anular entrada que estaba  mal implementado el espacio donde gurdaba las entradas en el ArrayList